corrected stylesheet links in index.php and set image size in css for better visibilty in deelopment

--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,7 @@
 body {
     font-size: 62.5%;
 }
+
+img {
+    width: 200px;
+}
